- Fixed padding on small screens

--- a/movie-lib/src/app/core/components/side-nav/side-nav.component.css
+++ b/movie-lib/src/app/core/components/side-nav/side-nav.component.css
@@ -21,4 +21,8 @@ main {
 	mat-toolbar {
 		padding: 9px !important;
 	}
+
+	main {
+		padding: 8px;
+	}
 }
